# optigy

./: .gitignore  Cargo.toml  README.md
benches/: sparsity_pattern.rs
demos/approximation/: Cargo.toml
demos/approximation/src/: main.rs
demos/pose_graph_g2o/: Cargo.toml
demos/pose_graph_g2o/src/: main.rs
demos/slam_2d/: Cargo.toml
demos/slam_2d/data/: gps.txt  gt.txt  landmarks.txt  observations.txt  odometry.txt
demos/slam_2d/src/: gps_factor.rs  landmarks.rs  main.rs  state_variables.rs  vision_factor.rs
examples/: gps_factor_example.rs  pose_graph_g2o.rs
src/: lib.rs
src/core/: factor.rs  factor_graph.rs  factors.rs  factors_container.rs  key.rs  loss_function.rs  mod.rs  recursive_map_container.rs  recursive_variadic.rs  variable.rs  variable_ordering.rs  variables.rs  variables_container.rs
src/factor_graph/: factor_graph.rs  mod.rs
src/fixedlag/: marginalization.rs  mod.rs
src/linear/: dense_cholesky_solver.rs  linear_solver.rs  mod.rs  sparse_cholesky_solver.rs
src/nonlinear/: gauss_newton_optimizer.rs  levenberg_marquardt_optimizer.rs  linearization.rs  mod.rs  nonlinear_optimizer.rs  sparsity_pattern.rs
src/prelude/: mod.rs
src/slam/: between_factor.rs  mod.rs  prior_factor.rs  se3.rs
src/variables_impl/: mod.rs
src/viz/: graph_viz.rs
