[package]
name = "optigy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.11.2"
nalgebra = {version="0.32.3", features=["compare"]}
nalgebra-sparse = {version="0.9.0", features=["compare"]}
num = "0.4.1"
rand = "0.8.5"
sophus-rs= { git = "https://github.com/strasdat/sophus-rs.git",  rev="f632c85" }
tynm = "0.1.8"
clarabel = "0" 
[dev-dependencies]
matrixcompare = "0.3.0"
criterion = { version = "0.4", features = ["html_reports"] }
[[bench]]
name = "sparsity_pattern"
harness = false