[package]
name = "optigy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["demos/pose_graph_g2o", "demos/slam_2d", "demos/approximation"]
[dependencies]
hashbrown = "0.11.2"
nohash-hasher = "0.2.0"
nalgebra = {version="0.32.3", features=["compare"]}
nalgebra-sparse = {version="0.9.0", features=["compare"]}
num = "0.4.1"
rand = "0.8.5"
# sophus-rs= { git = "https://github.com/strasdat/sophus-rs.git",  rev="f632c85" }
sophus-rs= { git = "https://github.com/Lishen1/sophus-rs.git",  branch="lie-only" }
tynm = "0.1.8"
clarabel = "0.6.0" 
# dot_graph = {version="0.2.3", optional=true}
# dot_graph = {version="0.2.3", path="../dot_graph", optional=true}
dot_graph = {version="0.2.3", git="https://github.com/Lishen1/dot_graph.git", optional=true}
lazy_static = {version="1.4.0", optional=true}
random_color = {version="0.6.1", optional=true} 
prisma = {version="0.1.1", optional=true}
angular-units = {version="^0.2.4", optional=true}
layout-rs = {version="0.1.1", optional=true}
graphviz-rust ={version="0.6.6", optional=true}
# printpdf= {version="0.6.0", features=["svg"], path="../printpdf"}
printpdf= {version="0.6.0", features=["svg"], optional=true, git = "https://github.com/Lishen1/printpdf.git", branch="feature/svg-text"}
[features]
default = ["viz"]
viz = ["dep:dot_graph", "dep:random_color", "dep:lazy_static", "dep:prisma", "dep:angular-units", "dep:graphviz-rust", "dep:printpdf"]
[dev-dependencies]
matrixcompare = "0.3.0"
criterion = { version = "0.4", features = ["html_reports"] }
[[bench]]
name = "sparsity_pattern"
harness = false
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
