[package]
name = "approximation"
version = "0.1.0"
edition = "2021"

workspace = "../../"
[dependencies]
optigy = { path = "../../" }
nalgebra = {version="0.32.3", features=["compare"]}
clap = { version = "4.3.23", features = ["derive"]}
num = "0.4.1"
textplots = "0.8.4"
rgb = "0.8.27"
color-print = "0.3.5"
