[package]
name = "pose_graph_g2o"
version = "0.1.0"
edition = "2021"

workspace = "../../"
[dependencies]
plotters = {version="0.3.5", features = ["ttf", "all_series"] }
optigy = { path = "../../" }
nalgebra = {version="0.32.3", features=["compare"]}
clap = { version = "4.3.23", features = ["derive"]}